# corporate_imgen

./: .gitignore  CLAUDE.md  README.md  modularity.md  pyproject.toml
.claude/: settings.local.json
.claude/agents/: ui-designer.md
.claude/hooks/: format.py
plans/: lucky-tickling-pearl.md
src/: config.py  models.py  server.py  storage.py
src/providers/: __init__.py  openai.py  recraft.py
taskdocs/: image-gen-mcp-spec.md
tests/: test_storage_cli.py
